--- a/kingWeb/kingWeb/templates/adm/table_column/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/add.html
@@ -46,7 +46,7 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="DataType"
                    data-val="true" data-val-maxlength="数据类型长度不能超过50个字符" data-val-maxlength-max="12"
-                   data-val-required="数据类型不能为空" />
+                   data-val-required="数据类型不能为空" data-toggle="tooltip" title="out/enum"/>
             <span class="field-validation-valid" data-valmsg-for="DataType" data-valmsg-replace="true"></span>
         </div>
     </div>
