--- a/kingWeb/kingWeb/templates/adm/table_column/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/edit.html
@@ -48,7 +48,7 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="DataType" value="{{datatype}}"
                    data-val="true" data-val-maxlength="数据类型长度不能超过50个字符" data-val-maxlength-max="12"
-                   data-val-required="数据类型不能为空" />
+                   data-val-required="数据类型不能为空"  data-toggle="tooltip" title="out/enum" />
             <span class="field-validation-valid" data-valmsg-for="DataType" data-valmsg-replace="true"></span>
         </div>
     </div>
