--- a/kingWeb/kingWeb/templates/adm/table_list/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/add.html
@@ -93,17 +93,17 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="DefaultSort" data-toggle="tooltip" title="例如:Id desc" />
         </div>
-        <label class="col-md-2 control-label">禁止删除条件</label>
+        <label class="col-md-2 control-label">允许删除条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenDeleteFilter" data-toggle="tooltip" title="例如:Id > 1000" />
+            <input type="text" class="form-control" name="ForbiddenDeleteFilter" data-toggle="tooltip" title="例如:Id > 10 或 not (id > 10)" />
         </div>
     </div>
     <div class="form-group">
-        <label class="col-md-2 control-label">禁止更新条件</label>
+        <label class="col-md-2 control-label">允许更新条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenUpdateFilter" data-toggle="tooltip" title="例如: Id < 1000" />
+            <input type="text" class="form-control" name="ForbiddenUpdateFilter" data-toggle="tooltip" title="例如: Id < 10 或 not (id > 10)" />
         </div>
-        <label class="col-md-2 control-label">禁止添加条件</label>
+        <label class="col-md-2 control-label">允许添加条件</label>
         <div class="col-md-4">
             <input type="text" class="form-control" name="ForbiddenAddFilter" placeholder="未实现" />
         </div>
@@ -111,7 +111,7 @@
     <div class="form-group">
         <label class="col-md-2 control-label">默认过滤条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DefaultFilter" data-toggle="tooltip" title="例如: Id != 1000" />
+            <input type="text" class="form-control" name="DefaultFilter" data-toggle="tooltip" title="例如: Id != 10" />
         </div>
     </div>
     <div class="form-group">
