--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -93,17 +93,17 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="DefaultSort" value="{{defaultsort}}" data-toggle="tooltip" title="例如:Id desc" />
         </div>
-        <label class="col-md-2 control-label">禁止删除条件</label>
+        <label class="col-md-2 control-label">允许删除条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenDeleteFilter" value="{{forbiddendeletefilter}}" data-toggle="tooltip" title="例如:Id > 1000" />
+            <input type="text" class="form-control" name="ForbiddenDeleteFilter" value="{{forbiddendeletefilter}}" data-toggle="tooltip" title="例如:Id > 10 或 not (id > 10)" />
         </div>
     </div>
     <div class="form-group">
-        <label class="col-md-2 control-label">禁止更新条件</label>
+        <label class="col-md-2 control-label">允许更新条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenUpdateFilter" value="{{forbiddenupdatefilter}}" data-toggle="tooltip" title="例如: Id < 1000" />
+            <input type="text" class="form-control" name="ForbiddenUpdateFilter" value="{{forbiddenupdatefilter}}" data-toggle="tooltip" title="例如:Id > 10 或 not (id > 10)" />
         </div>
-        <label class="col-md-2 control-label">禁止添加条件</label>
+        <label class="col-md-2 control-label">允许添加条件</label>
         <div class="col-md-4">
             <input type="text" class="form-control" name="ForbiddenAddFilter" value="{{forbiddenaddfilter}}" placeholder="未实现" />
         </div>
