--- a/kingWeb/kingWeb/templates/adm/department/index.html
+++ b/kingWeb/kingWeb/templates/adm/department/index.html
@@ -47,9 +47,9 @@
                     "bSortable": false
                 },
                 { "mData": "rownum", "sClass": "text-center" },
-                { "mData": "name", "sClass": "text-center" },
+                { "mData": "name","name":"name" "sClass": "text-center" },
                 { "mData": "parentname", "sClass": "text-center" },
-                { "mData": "leader", "sClass": "text-center" },
+                { "mData": "leader","name":"leader" "sClass": "text-center" },
                 { "mData": "description", "sClass": "text-center" }
             ];
             lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl)
