--- a/kingWeb/kingWeb/templates/adm/menu/index.html
+++ b/kingWeb/kingWeb/templates/adm/menu/index.html
@@ -51,11 +51,11 @@
                     "bSortable": false
                 },
                 { "mData": "rownum", "sClass": "text-center" },
-                { "mData": "modulename", "sClass": "text-center" },
-                { "mData": "parentname", "sClass": "text-center" },
-                { "mData": "typename", "sClass": "text-center" },
-                { "mData": "name", "sClass": "text-center", "bSortable": false },
-                { "mData": "url", "sClass": "text-center", "bSortable": false },
+                { "mData": "modulename", "name":"moduleid","sClass": "text-center" },
+                { "mData": "parentname","name":"parentid", "sClass": "text-center" },
+                { "mData": "typename","name":"type", "sClass": "text-center" },
+                { "mData": "name","name":"name", "sClass": "text-center" },
+                { "mData": "url", "name":"url","sClass": "text-center" },
                 {
                     "sClass": "text-center",
                     "mData": "icon",
