--- a/kingWeb/kingWeb/templates/adm/system_option/index.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/index.html
@@ -47,7 +47,7 @@
                     "bSortable": false
                 },
                 { "mData": "rownum", "sClass": "text-center" },
-                { "mData": "code", "sClass": "text-center" },
+                { "mData": "code","name":"name", "sClass": "text-center" },
                 { "mData": "value", "sClass": "text-center" }
             ];
             lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl)
