--- a/kingWeb/kingWeb/templates/adm/table_list/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/index.html
@@ -73,7 +73,7 @@
                 },
                 { "mData": "rownum", "sClass": "text-center" },
                 { "mData": "id", "sClass": "text-center" },
-                { "mData": "name", "sClass": "text-center" },
+                { "mData": "name", "name":"name","sClass": "text-center" },
                 { "mData": "description", "sClass": "text-center" },
                 { "mData": "allowview", "sClass": "text-center" },
                 { "mData": "allowadd", "sClass": "text-center" },
