--- a/kingWeb/kingWeb/templates/adm/role/index.html
+++ b/kingWeb/kingWeb/templates/adm/role/index.html
@@ -46,7 +46,7 @@
                     "bSortable": false
                 },
                 { "mData": "rownum", "sClass": "text-center" },
-                { "mData": "name", "sClass": "text-center" },
+                { "mData": "name","name":"name","sClass": "text-center" },
                 { "mData": "description", "sClass": "text-center" }
             ];
             lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl)
