--- a/kingWeb/kingWeb/templates/adm/table_column/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/index.html
@@ -58,8 +58,8 @@
                     "bSortable": false
                 },
                 { "mData": "rownum", "sClass": "text-center" },
-                { "mData": "tablename", "sClass": "text-center" },
-                { "mData": "name", "sClass": "text-center" },
+                { "mData": "tablename","name":"tableid", "sClass": "text-center" },
+                { "mData": "name", "name":"name","sClass": "text-center" },
                 { "mData": "description", "sClass": "text-center" },
                 { "mData": "datatype", "sClass": "text-center" },
                 { "mData": "addvisible", "sClass": "text-center" },
