--- a/kingWeb/kingWeb/templates/adm/home/access_denied.html
+++ b/kingWeb/kingWeb/templates/adm/home/access_denied.html
@@ -1,8 +1,3 @@
 ﻿{% extends "adm/shared/layout_content.html" %}
-{%block title%}{{title}}{% endblock%}
+{%block title%}无权限访问{% endblock%}
 
-<div>
-   无权限访问
-</div>
-<hr />
-<button type="button" class="btn btn-danger"  onclick="history.go(-1)">返回</button>
