--- a/kingWeb/kingWeb/templates/adm/Shared/layout.html
+++ b/kingWeb/kingWeb/templates/adm/Shared/layout.html
@@ -34,36 +34,20 @@
             </div>
             <div class="clearfix"></div>
             <div class="sidebar-menu">
-<a href="#a46" class="nav-header menu-first collapsed" data-toggle="collapse"><i class="fa fa-cog"></i>系统设置</a><ul id="a46" class="nav nav-list collapse menu-second"><li><a data-index="1" data-url="/adm/role" class="J_menuItem"><i class="fa fa-chevron-right"></i>角色管理</a></li><li><a data-index="2" data-url="/adm/department" class="J_menuItem"><i class="fa fa-chevron-right"></i>部门管理</a></li><li><a data-index="3" data-url="/adm/role/authen" class="J_menuItem"><i class="fa fa-chevron-right"></i>角色授权</a></li><li><a data-index="4" data-url="/adm/user/index" class="J_menuItem"><i class="fa fa-chevron-right"></i>用户管理</a></li><li><a data-index="5" data-url="/adm/user/department" class="J_menuItem"><i class="fa fa-chevron-right"></i>用户部门</a></li><li><a data-index="6" data-url="/adm/module" class="J_menuItem"><i class="fa fa-chevron-right"></i>模块管理</a></li><li><a data-index="7" data-url="/adm/menu" class="J_menuItem"><i class="fa fa-chevron-right"></i>菜单管理</a></li><li><a data-index="8" data-url="/adm/tablelist/index" class="J_menuItem"><i class="fa fa-chevron-right"></i>表管理</a></li><li><a data-index="9" data-url="/adm/tablecolumn/index" class="J_menuItem"><i class="fa fa-chevron-right"></i>表结构管理</a></li><li><a data-index="11" data-url="/adm/systemoption/index" class="J_menuItem"><i class="fa fa-chevron-right"></i>系统参数</a></li><li><a data-index="12" data-url="/jobs" class="J_menuItem"><i class="fa fa-chevron-right"></i>后台任务</a></li><li><a data-index="13" data-url="/adm/user/edit" class="J_menuItem"><i class="fa fa-chevron-right"></i>修改信息</a></li></ul><a href="#a55" class="nav-header menu-first collapsed" data-toggle="collapse"><i class="fa fa-sticky-note"></i>系统日志</a><ul id="a55" class="nav nav-list collapse menu-second"><li><a data-index="1" data-url="/adm/log/operation" class="J_menuItem"><i class="fa fa-chevron-right"></i>操作日志</a></li><li><a data-index="2" data-url="/adm/log/login" class="J_menuItem"><i class="fa fa-chevron-right"></i>登陆日志</a></li><li><a data-index="3" data-url="/adm/log/chart" class="J_menuItem"><i class="fa fa-chevron-right"></i>统计图表</a></li></ul><a href="#a2033" class="nav-header menu-first collapsed" data-toggle="collapse"><i class="fa fa-database"></i>基础数据</a><ul id="a2033" class="nav nav-list collapse menu-second"><li><a data-index="1" data-url="/adm/viewlist/index/2" class="J_menuItem"><i class="fa fa-chevron-right"></i>部门管理</a></li><li><a data-index="2" data-url="/adm/viewlist/index/1009" class="J_menuItem"><i class="fa fa-chevron-right"></i>登录日志</a></li><li><a data-index="3" data-url="/adm/viewlist/index/1" class="J_menuItem"><i class="fa fa-chevron-right"></i>领导管理</a></li><li><a data-index="99" data-url="#" class="J_menuItem"><i class="fa fa-chevron-right"></i>基础数据菜单权限</a></li></ul>
+                {% load set_val %}
+                    {% for module in modules %}
+                    <a href="#a{{module.id}}" class="nav-header menu-first collapsed"
+                                 data-toggle="collapse"><i class="{{module.icon}}"></i>{{module.name}}</a>
+                           <ul id="a{{module.id}}" class="nav nav-list collapse menu-second">
+                           {% for menu in menus %}
+                                {% if menu.parentid == module.id %}
+                                 <li><a data-index="{{menu.listorder}}" data-url="{{menu.url}}" class="J_menuItem">
+                                    <i class="fa fa-chevron-right"></i>{{menu.name}}</a></li>
+                                {% endif %}
+                           {% endfor %}
+                            </ul>
+                   {% endfor %}
             </div>
-            <!--<div class="sidebar-menu">
-                @if (myMenus != null && myMenus.Any())
-                {
-                    StringBuilder sb = new StringBuilder();
-                    var modules = myMenus.Where(item => item.Type == MenuType.模块);
-                    foreach (var module in modules)
-                    {
-                        var id = "a" + module.Id.ToString(); // CnToPinyin.convertCh(module.Name);
-                        sb.Append(string.Format("<a href=\"#{0}\" class=\"nav-header menu-first collapsed\" data-toggle=\"collapse\">" + "<i class=\"{1}\"></i>{2}</a>",
-                           id, module.Icon, module.Name));
-                        var menus = myMenus.Where(item => item.ParentId == module.Id && item.Type == MenuType.菜单);
-                        if (menus.Any())
-                        {
-                            sb.Append(string.Format("<ul id=\"{0}\" class=\"nav nav-list collapse menu-second\">", id));
-
-                            foreach (var menu in menus)
-                            {
-                                sb.Append(string.Format("<li><a data-index=\"{0}\" data-url=\"{1}\" class=\"J_menuItem\"><i class=\"fa fa-chevron-right\"></i>{2}</a></li>",
-                                    menu.ListOrder, menu.Url, menu.Name));
-                            }
-
-                            sb.Append("</ul>");
-                        }
-                    }
-                    @Html.Raw(sb.ToString());
-                }
-
-            </div>-->
 
             <div class="sidebar-footer">
                 <a><span class="fa fa-telegram"></span></a>
