--- a/kingWeb/kingWeb/templates/adm/home/error.html
+++ b/kingWeb/kingWeb/templates/adm/home/error.html
@@ -1,8 +1,3 @@
 ﻿{% extends "adm/shared/layout_content.html" %}
-{%block title%}{{title}}{% endblock%}
+{%block title%}出错了{% endblock%}
 
-<div>
-   出错了
-</div>
-<hr />
-<button type="button" class="btn btn-danger"  onclick="history.go(-1)">返回</button>
