--- a/kingWeb/kingWeb/templates/adm/home/notfound.html
+++ b/kingWeb/kingWeb/templates/adm/home/notfound.html
@@ -1,8 +1,3 @@
 ﻿{% extends "adm/shared/layout_content.html" %}
-{%block title%}{{title}}{% endblock%}
+{%block title%}页面不存在{% endblock%}
 
-<div>
-   页面不存在
-</div>
-<hr />
-<button type="button" class="btn btn-danger"  onclick="history.go(-1)">返回</button>
