--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -27,6 +27,8 @@
     <script src="{%static 'lib/datatables/media/css/jquery.dataTables.min.css' %}"></script>
     <script src="{%static 'lib/datatables/media/js/jquery.dataTables.min.js' %}"></script>
 
+    <script src="{% static 'lib/echart/echarts-all.js'%}"></script>
+
     <!--Layer-->
     <script src="{%static 'lib/layer/src/layer.js' %}"></script>
     <link href="{%static 'lib/layer/src/theme/default/layer.css' %}" rel="stylesheet" />
