--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -3,11 +3,12 @@
 
 {% block scripts %}
     <script type="text/javascript">
-        $(function () {
-            lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("adm", "tablelist", "index")
-            }, "操作成功")
-        })
+    $(function () {
+        $("[data-toggle='tooltip']").tooltip();
+        lkWeb.FormValidation($("#lkForm"), function () {
+            lkWeb.GoAction("adm", "tablelist", "index")
+        }, "操作成功")
+    })
 
     </script>
 
