--- a/kingWeb/kingWeb/templates/adm/table_list/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/add.html
@@ -45,6 +45,10 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="AllowView" data-toggle="tooltip" title="1 or 0" />
         </div>
+                <label class="col-md-2 control-label">添加是否允许</label>
+         <div class="col-md-4">
+             <input type="text" class="form-control" name="AllowAdd" data-toggle="tooltip" title="1 or 0" />
+         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">编辑是否允许</label>
