--- a/kingWeb/kingWeb/templates/adm/table_list/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/index.html
@@ -76,6 +76,7 @@
                 { "mData": "name", "name":"name","sClass": "text-center" },
                 { "mData": "description", "sClass": "text-center" },
                 { "mData": "allowview", "sClass": "text-center" },
+                { "mData": "allowadd", "sClass": "text-center" },
                 { "mData": "allowedit", "sClass": "text-center" },
                 { "mData": "allowdelete", "sClass": "text-center" },
                 { "mData": "isview", "sClass": "text-center" }
@@ -115,6 +116,7 @@
             <th>表名</th>
             <th>表说明</th>
             <th>查看是否允许</th>
+            <th>添加是否允许</th>
             <th>编辑是否允许</th>
             <th>删除是否允许</th>
             <th>是否视图</th>
